--- a/style.css
+++ b/style.css
@@ -120,7 +120,7 @@ h1 {
 
 .experiencia i {
   font-size: 2.5rem;
-  color: #7ade30;
+  color: #de30d0;
   background-color: #0a0a23;
   padding: 8px 19px;
   border-radius: 50%;
